Primary should abort if encountered problems writing to the oplog

XMLWordPrintableJSON

    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In a replica set if primary has problems writing to the oplog, for example because of corruption there, it still continues applying writes, but they never go to oplog. Thus they are not replicating. Additionally, once the problem is identified, there is no easy way to recover the applied data if it's not in the oplog.

      Primary should abort if it encountered data access related assertions in
      the oplog collection, including:

      • invalid bsonobjsize
      • delete bucket corrupted

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Alexander Komyagin (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: