SERVER-12058 Abort mongod before letting exceptions esacpe from logOp().

Letting exceptions escape from logOp() can lead to inconsistencies in the oplog.