src/mongo/db/repl/oplog.cpp
@@ -417,18 +417,31 @@ namespace repl {
                BSONObj* patt,
                bool* b,
                bool fromMigrate) {
-        if ( replSettings.master ) {
-            _logOp(txn, opstr, ns, 0, obj, patt, b, fromMigrate);
+        try {
+            if ( replSettings.master ) {
+                _logOp(txn, opstr, ns, 0, obj, patt, b, fromMigrate);
+            }
+
+            logOpForSharding(txn, opstr, ns, obj, patt, fromMigrate);
+            logOpForDbHash(ns);
+            getGlobalAuthorizationManager()->logOp(opstr, ns, obj, patt, b);
+
+            if ( strstr( ns, ".system.js" ) ) {
+                Scope::storedFuncMod(); // this is terrible
+            }
         }
-
-        logOpForSharding(txn, opstr, ns, obj, patt, fromMigrate);
-        logOpForDbHash(ns);
-        getGlobalAuthorizationManager()->logOp(opstr, ns, obj, patt, b);
-
-        if ( strstr( ns, ".system.js" ) ) {
-            Scope::storedFuncMod(); // this is terrible
+        catch (const DBException& ex) {
+            severe() << "Fatal DBException in logOp(): " << ex.toString();
+            std::terminate();
         }
-
+        catch (const std::exception& ex) {
+            severe() << "Fatal std::exception in logOp(): " << ex.what();
+            std::terminate();
+        }
+        catch (...) {
+            severe() << "Fatal error in logOp()";
+            std::terminate();
+        }
     }
 
     void createOplog() {
